Rename user routes for consistency
